Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/assert/DU1.out
DU1.java:16:9: compiler.err.var.might.already.be.assigned: i
1 error
